force-app/main/default/objects/Leaves__c/Leaves__c.object-meta.xml
<CustomObject>
    <label>Leave</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Leave Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaves</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>