force-app/main/default/objects/Leaves__c/fields/Approval_Status_Img__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Img__c</fullName>
    <formula>CASE( ApprovalStatus__c , &apos;Approved&apos;, IMAGE(&quot;/resource/Approved&quot;, &quot;Rejected&quot;,70,70), &apos;Rejected&apos;, IMAGE(&quot;/resource/Rejected&quot;, &quot;Rejected&quot;,75,87.5),&apos;Pending&apos;,IMAGE(&quot;/resource/Pending&quot;, &quot;Pending&quot;,70,70),&apos;Disbursal&apos;,&apos;Disbursal&apos;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>