force-app/main/default/objects/Leaves__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Leave Approved</fullName>
            </value>
            <value>
                <fullName>Leave Rejected</fullName>
            </value>
            <value>
                <fullName>Leave Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>