force-app/main/default/objects/Leaves__c/fields/Cancellation_Requested__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Requested</label>
    <type>Checkbox</type>
</CustomField>