force-app/main/default/objects/Leaves__c/fields/EditPemissionAfterApproval__c.field-meta.xml
<CustomField>
    <fullName>EditPemissionAfterApproval__c</fullName>
    <formula>OpenByOwner__c &amp;&amp;
  ($User.Profile_Name__c ==&apos;Admin&apos; || $User.Profile_Name__c ==&apos;Marketing Manager&apos; ||
  $User.Profile_Name__c ==&apos;Zonal Sales Manager&apos; || $User.Profile_Name__c ==&apos;Regional Sales Manager&apos; ||
   $User.Profile_Name__c ==&apos;System Administrator&apos;) &amp;&amp; 	Leave_Status__c ==&apos;Leave Approved&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EditPemissionAfterApproval</label>
    <type>Checkbox</type>
</CustomField>