force-app/main/default/objects/Leaves__c/fields/Halfday__c.field-meta.xml
<CustomField>
    <fullName>Halfday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Halfday</label>
    <type>Checkbox</type>
</CustomField>