force-app/main/default/objects/Leaves__c/fields/HR_Email__c.field-meta.xml
<CustomField>
    <fullName>HR_Email__c</fullName>
    <formula>HR__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HR Email</label>
    <type>Text</type>
</CustomField>