force-app/main/default/objects/Leaves__c/fields/Is_Current_User_Approver__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_User_Approver__c</fullName>
    <formula>AND(
    Approver__c = $User.Id,
    TEXT(ApprovalStatus__c) = &quot;Submitted for Approval&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User Approver</label>
    <type>Checkbox</type>
</CustomField>