force-app/main/default/objects/Leaves__c/fields/Is_Current_User_Cancellation_Approver__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_User_Cancellation_Approver__c</fullName>
    <formula>AND(
    Approver__c = $User.Id,
    TEXT(Leave_Cancellation_Status__c) = &quot;Cancellation Approved&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User Cancellation Approver</label>
    <type>Checkbox</type>
</CustomField>