force-app/main/default/objects/Leaves__c/fields/Is_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Record_Owner__c</fullName>
    <formula>$User.Id = OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Record Owner</label>
    <type>Checkbox</type>
</CustomField>