force-app/main/default/objects/Leaves__c/fields/Leave_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Leave_Approved_Date__c</fullName>
    <label>Leave Approved Date</label>
    <type>Date</type>
</CustomField>