force-app/main/default/objects/Leaves__c/fields/Leave_Approver_L1_Email__c.field-meta.xml
<CustomField>
    <fullName>Leave_Approver_L1_Email__c</fullName>
    <formula>Approver__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Approver L1 Email</label>
    <type>Text</type>
</CustomField>