force-app/main/default/objects/Leaves__c/fields/Leave_Cancellation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Leave_Cancellation_Comments__c</fullName>
    <label>Leave Cancellation Comments</label>
    <type>TextArea</type>
</CustomField>