force-app/main/default/objects/Leaves__c/fields/Leave_Cancellation_Status__c.field-meta.xml
<CustomField>
    <fullName>Leave_Cancellation_Status__c</fullName>
    <label>Leave Cancellation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted for Cancellation</fullName>
            </value>
            <value>
                <fullName>Cancellation Approved</fullName>
            </value>
            <value>
                <fullName>Cancellation Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>