force-app/main/default/objects/Leaves__c/fields/Leave_Month__c.field-meta.xml
<CustomField>
    <fullName>Leave_Month__c</fullName>
    <formula>MONTH(From_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>