force-app/main/default/objects/Leaves__c/fields/Leave_Status__c.field-meta.xml
<CustomField>
    <fullName>Leave_Status__c</fullName>
    <formula>If( Cancellation_Requested__c ,Text( Leave_Cancellation_Status__c) ,Text( ApprovalStatus__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Status</label>
    <type>Text</type>
</CustomField>