force-app/main/default/objects/Leaves__c/fields/Leave_Year__c.field-meta.xml
<CustomField>
    <fullName>Leave_Year__c</fullName>
    <formula>YEAR(From_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>