force-app/main/default/objects/Leaves__c/fields/LeaveisCancelling__c.field-meta.xml
<CustomField>
    <fullName>LeaveisCancelling__c</fullName>
    <formula>Text(Leave_Cancellation_Status__c) !=&apos;Submitted for Cancellation&apos; &amp;&amp; Text(Leave_Cancellation_Status__c) !=&apos;Cancellation Approved&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeaveisCancelling</label>
    <type>Checkbox</type>
</CustomField>