force-app/main/default/objects/Leaves__c/fields/No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days__c</fullName>
    <formula>IF(
    OR(
        TEXT(Session_Type__c) = &apos;First Half&apos;,
        TEXT(Session_Type__c) = &apos;Second Half&apos;
    ),
    0.5,
    CASE(
        MOD(From_Date__c - DATE(1985, 6, 24), 7),
        0, CASE(MOD(To_Date__c - From_Date__c, 7), 1, 2, 2, 3, 3, 4, 4, 5, 5, 6, 6, 6, 1),
        1, CASE(MOD(To_Date__c - From_Date__c, 7), 1, 2, 2, 3, 3, 4, 4, 5, 5, 5, 6, 6, 1),
        2, CASE(MOD(To_Date__c - From_Date__c, 7), 1, 2, 2, 3, 3, 4, 4, 4, 5, 5, 6, 6, 1),
        3, CASE(MOD(To_Date__c - From_Date__c, 7), 1, 2, 2, 3, 3, 3, 4, 4, 5, 5, 6, 6, 1),
        4, CASE(MOD(To_Date__c - From_Date__c, 7), 1, 2, 2, 2, 3, 3, 4, 4, 5, 5, 6, 6, 1),
        5, CASE(MOD(To_Date__c - From_Date__c, 7), 1, 1, 2, 2, 3, 3, 4, 4, 5, 5, 6, 6, 1),
        6, CASE(MOD(To_Date__c - From_Date__c, 7), 1, 1, 2, 2, 3, 3, 4, 4, 5, 5, 6, 6, 0),
        999
    ) +
    (FLOOR((To_Date__c - From_Date__c) / 7) * 6)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>