force-app/main/default/objects/Leaves__c/fields/OpenByOwner__c.field-meta.xml
<CustomField>
    <fullName>OpenByOwner__c</fullName>
    <formula>Owner:User.Id == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpenByOwner</label>
    <type>Checkbox</type>
</CustomField>