force-app/main/default/objects/Leaves__c/fields/QueryDate__c.field-meta.xml
<CustomField>
    <fullName>QueryDate__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QueryDate</label>
    <type>Date</type>
</CustomField>