force-app/main/default/objects/Leaves__c/fields/QueryVal__c.field-meta.xml
<CustomField>
    <fullName>QueryVal__c</fullName>
    <formula>&apos;SUM( No_of_Day__c )&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QueryVal</label>
    <type>Text</type>
</CustomField>