force-app/main/default/objects/Leaves__c/fields/Same_Date__c.field-meta.xml
<CustomField>
    <fullName>Same_Date__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(From_Date__c)),
        NOT(ISBLANK(To_Date__c)),
        From_Date__c = To_Date__c
    ),
    True,
    False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same Date</label>
    <type>Checkbox</type>
</CustomField>