force-app/main/default/objects/Leaves__c/fields/Show_Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Show_Session_Type__c</fullName>
    <formula>From_Date__c = To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Session Type</label>
    <type>Checkbox</type>
</CustomField>