force-app/main/default/objects/Leaves__c/fields/To_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>To_Date_Month__c</fullName>
    <formula>MONTH(To_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Date Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>