force-app/main/default/objects/Leaves__c/fields/To_Year__c.field-meta.xml
<CustomField>
    <fullName>To_Year__c</fullName>
    <formula>YEAR(To_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>