force-app/main/default/objects/Leaves__c/fields/Type_of_Leave__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Leave__c</fullName>
    <label>Type of Leave</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compensatory Leave</fullName>
            </value>
            <value>
                <fullName>Casual Leave</fullName>
            </value>
            <value>
                <fullName>Earned Leave</fullName>
            </value>
            <value>
                <fullName>ESI leave</fullName>
            </value>
            <value>
                <fullName>Maternity Leave</fullName>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Leave Without Wages</fullName>
            </value>
            <value>
                <fullName>1/2 Day Loss of pay</fullName>
            </value>
            <value>
                <fullName>Please Select</fullName>
                <isActive>false</isActive>
                <label>Please Select</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>