force-app/main/default/objects/Leaves__c/validationRules/Only_Owner_Can_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Owner_Can_Edit</fullName>
    <active>true</active>
    <description>$User.Id &lt;&gt; OwnerId</description>
    <errorConditionFormula>AND(
   NOT(ISNEW()),
   $User.Id &lt;&gt; OwnerId,
   $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>You do not have permission to edit this record because you are not the owner.</errorMessage>
</ValidationRule>