force-app/main/default/objects/Leaves__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>Type_of_Leave__c</columns>
    <columns>Leave_Status__c</columns>
    <columns>User__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>