force-app/main/default/objects/Leaves__c/listViews/Approval_Pending_Leaves.listView-meta.xml
<ListView>
    <fullName>Approval_Pending_Leaves</fullName>
    <columns>NAME</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>Session_Type__c</columns>
    <columns>Type_of_Leave__c</columns>
    <columns>Leave_Status__c</columns>
    <columns>User__c</columns>
    <columns>Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>Submitted for Approval</value>
    </filters>
    <label>Approval Pending Leaves</label>
</ListView>