force-app/main/default/objects/Leaves__c/listViews/Cancellation_Approved_Leaves.listView-meta.xml
<ListView>
    <fullName>Cancellation_Approved_Leaves</fullName>
    <columns>NAME</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>Session_Type__c</columns>
    <columns>Type_of_Leave__c</columns>
    <columns>Leave_Status__c</columns>
    <columns>User__c</columns>
    <columns>Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Leave_Cancellation_Status__c</field>
        <operation>equals</operation>
        <value>Cancellation Approved</value>
    </filters>
    <label>Cancellation Approved Leaves</label>
</ListView>